reference/5.0/Microsoft.PowerShell.Core/About/About.md
---
Module Name: About
Module Guid: 00000000-0000-0000-0000-000000000000
Download Help Link: http://Please-enter-FwLink-manually
Help Version: 6.0
Locale: en-US
---

# About Module
## Description
{{Manually Enter Description Here}}

## About Topics

### [about_Aliases](about_Aliases.md)
Describes how to use alternate names for cmdlets and commands in  Windows PowerShell?

### [about_Arithmetic_Operators](about_Arithmetic_Operators.md)
Describes the operators that perform arithmetic in Windows PowerShell.

### [about_Arrays](about_Arrays.md)
Describes arrays, which are data structures designed to store
collections of items.

### [about_Assignment_Operators](about_Assignment_Operators.md)
Describes how to use operators to assign values to variables.

### [about_Automatic_Variables](about_Automatic_Variables.md)
Describes variables that store state information for PowerShell.
These variables are created and maintained by PowerShell.

### [about_Break](about_Break.md)
Describes a statement you can use to immediately exit Foreach, For, While,
Do, or Switch statements.

### [about_classes](about_classes.md)
Describes how you can use classes to create your own custom types.

### [about_Command_Precedence](about_Command_Precedence.md)
Describes how Windows PowerShell determines which command to run.

### [about_Command_Syntax](about_Command_Syntax.md)
Describes the syntax diagrams that are used in Windows PowerShell.

### [about_Comment_Based_Help](about_Comment_Based_Help.md)
Describes how to write comment-based help topics for functions and scripts.

### [about_CommonParameters](about_CommonParameters.md)
Describes the parameters that can be used with any cmdlet.

### [about_Comparison_Operators](about_Comparison_Operators.md)
Describes the operators that compare values in Windows PowerShell.

### [about_Continue](about_Continue.md)
Describes how the `Continue` statement immediately returns the program flow
to the top of a program loop.

### [about_Core_Commands](about_Core_Commands.md)
Lists the cmdlets that are designed for use with Windows PowerShell providers.

### [about_Data_Sections](about_Data_Sections.md)
Explains Data sections, which isolate text strings and other read-only
data from script logic.

### [about_Debuggers](about_Debuggers.md)
Describes the Windows PowerShell debugger.

### [about_desiredstateconfiguration](about_desiredstateconfiguration.md)
{{Manually Enter about_desiredstateconfiguration Description Here}}

### [about_Do](about_Do.md)
Runs a statement list one or more times, subject to a While or Until
condition.

### [about_dsclogresource](about_dsclogresource.md)
{{Manually Enter about_dsclogresource Description Here}}

### [about_Enum](about_Enum.md)
`enum` is used to declare an enumeration;
a distinct type that consists of a set of named labels called the
enumerator list.

### [about_Environment_Variables](about_Environment_Variables.md)
Describes how to access Windows environment variables in Windows
PowerShell.

### [about_Escape_Characters](about_Escape_Characters.md)
Introduces the escape character in PowerShell and explains
its effect.

### [about_Eventlogs](about_Eventlogs.md)
Windows PowerShell creates a Windows event log that is
named "Windows PowerShell" to record Windows PowerShell events. You can
view this log in Event Viewer or by using cmdlets that get events, such as
the Get-EventLog cmdlet. By default, Windows PowerShell engine and provider
events are recorded in the event log, but you can use the event log
preference variables to customize the event log. For example, you can add
events about Windows PowerShell commands.

### [about_Execution_Policies](about_Execution_Policies.md)
Describes the Windows PowerShell execution policies and explains
how to manage them.

### [about_For](about_For.md)
Describes a language command you can use to run statements based on a conditional test.

### [about_Foreach](about_Foreach.md)
Describes a language command you can use to traverse all the items in a
collection of items.

### [about_Format.ps1xml](about_Format.ps1xml.md)
The Format.ps1xml files in Windows PowerShell define the default display
of objects in the Windows PowerShell console. You can create your own
Format.ps1xml files to change the display of objects or to define default
displays for new object types that you create in Windows PowerShell.

### [about_Functions](about_Functions.md)
Describes how to create and use functions in Windows PowerShell.

### [about_Functions_Advanced](about_Functions_Advanced.md)
Introduces advanced functions that act similar to cmdlets.

### [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)
Describes how functions that specify the `CmdletBinding` attribute can use
the methods and properties that are available to compiled cmdlets.

### [about_Functions_Advanced_Parameters](about_Functions_Advanced_Parameters.md)
Explains how to add parameters to advanced functions.

### [about_Functions_CmdletBindingAttribute](about_Functions_CmdletBindingAttribute.md)
Describes the attribute that makes a function work like a
compiled cmdlet.

### [about_Functions_OutputTypeAttribute](about_Functions_OutputTypeAttribute.md)
Describes an attribute that reports the type of object that the function
returns.

### [about_Group_Policy_Settings](about_Group_Policy_Settings.md)
Describes the Group Policy settings for Windows PowerShell

### [about_Hash_Tables](about_Hash_Tables.md)
Describes how to create, use, and sort hash tables in Windows PowerShell.

### [about_hidden](about_hidden.md)
Describes the Hidden keyword, which hides class members from default Get\-Member results.

### [about_History](about_History.md)
Describes how to get and run commands in the command history.

### [about_If](about_If.md)
Describes a language command you can use to run statement lists based on the results of one or more conditional tests.

### [about_Jobs](about_Jobs.md)
Provides information about how Windows PowerShell background jobs run a
command or expression in the background without interacting with the
current session.

### [about_Job_Details](about_Job_Details.md)
Provides details about background jobs on local and remote computers.

### [about_Join](about_Join.md)
Describes how the join operator (-join) combines multiple strings into a single string.

### [about_Language_Keywords](about_Language_Keywords.md)
Describes the keywords in the Windows PowerShell scripting language.

### [about_Language_Modes](about_Language_Modes.md)
Explains language modes and their effect on Windows
PowerShell sessions.

### [about_Line_Editing](about_Line_Editing.md)
Describes how to edit commands at the Windows PowerShell command prompt.

### [about_locations](about_locations.md)
Describes how to access items from the working location in Windows PowerShellÂ®.

### [about_logical_operators](about_logical_operators.md)
Describes the operators that connect statements in Windows PowerShellÂ®.

### [about_Methods](about_Methods.md)
Describes how to use methods to perform actions on objects in  Windows PowerShell?

### [about_Modules](about_Modules.md)
Explains how to install, import, and use Windows PowerShell modules.

### [about_Objects](about_Objects.md)
Provides essential information about objects in Windows PowerShell.

### [about_Object_Creation](about_Object_Creation.md)
Explains how to create objects in  Windows PowerShell?

### [about_Operators](about_Operators.md)
Describes the operators that are supported by Windows PowerShell®.

### [about_Operator_Precedence](about_Operator_Precedence.md)
Lists the Windows PowerShell operators in precedence order.

### [about_packagemanagement](about_packagemanagement.md)
PackageManagement is an aggregator for software package managers.

### [about_Parameters](about_Parameters.md)
Describes how to work with command parameters in  Windows PowerShell?

### [about_Parameters_Default_Values](about_Parameters_Default_Values.md)
Describes how to set custom default values for the parameters of cmdlets and advanced functions.

### [about_Parsing](about_Parsing.md)
Describes how Windows PowerShell parses commands.

### [about_Path_Syntax](about_Path_Syntax.md)
Describes the full and relative path name formats in  Windows PowerShell?

### [about_pipelines](about_pipelines.md)
Combining commands into pipelines in the Windows PowerShell

### [about_PowerShell_exe](about_PowerShell_exe.md)
Explains how to use the PowerShell.exe command-line tool. Displays
the syntax and describes the command-line switches.

### [about_PowerShell_Ise_exe](about_PowerShell_Ise_exe.md)
Explains how to use the PowerShell_Ise.exe command-line tool.

### [about_Preference_Variables](about_Preference_Variables.md)
Variables that customize the behavior of Windows PowerShell

### [about_profiles](about_profiles.md)
Describes how to create and use a Windows PowerShell profile.

### [about_Prompts](about_Prompts.md)
Describes the Prompt function and demonstrates how to create a custom Prompt function.

### [about_Properties](about_Properties.md)
Describes how to use object properties in  Windows PowerShell?

### [about_Providers](about_Providers.md)
Describes how Windows PowerShell providers provide access to data and
components that would not otherwise be easily accessible at the command
line. The data is presented in a consistent format that resembles a file
system drive.

### [about_psconsolehostreadline](about_psconsolehostreadline.md)
Explains how to create a customize how Windows PowerShellÂ® reads input at the console prompt.

### [about_psreadline](about_psreadline.md)
{{Manually Enter about_psreadline Description Here}}

### [about_PSSessions](about_PSSessions.md)
Describes  Windows PowerShell?sessions (PSSessions) and explains how to establish a persistent connection to a remote computer.

### [about_PSSession_Details](about_PSSession_Details.md)
Provides detailed information about Windows PowerShell sessions and the
role they play in remote commands.

### [about_PSSnapins](about_PSSnapins.md)
Describes  Windows PowerShell?snap-ins and shows how to use and manage them.

### [about_Quoting_Rules](about_Quoting_Rules.md)
Describes rules for using single and double quotation marks in  Windows PowerShell?

### [about_Redirection](about_Redirection.md)
Explains how to redirect output from  Windows PowerShell?to text files.

### [about_Ref](about_Ref.md)
Describes how to create and use a reference variable type.

### [about_Regular_Expressions](about_Regular_Expressions.md)
Describes regular expressions in Windows PowerShell.

### [about_Remote](about_Remote.md)
Describes how to run remote commands in Windows PowerShell.

### [about_Remote_Disconnected_Sessions](about_Remote_Disconnected_Sessions.md)
Explains how to disconnect from and reconnect to a PSSession

### [about_Remote_FAQ](about_Remote_FAQ.md)
Contains questions and answers about running remote commands in  Windows PowerShell?

### [about_Remote_Jobs](about_Remote_Jobs.md)
Describes how to run background jobs on remote computers.

### [about_Remote_Output](about_Remote_Output.md)
Describes how to interpret and format the output of remote commands.

### [about_Remote_Requirements](about_Remote_Requirements.md)
Describes the system requirements and configuration requirements for
running remote commands in Windows PowerShell.

### [about_Remote_Troubleshooting](about_Remote_Troubleshooting.md)
Describes how to troubleshoot remote operations in Windows PowerShell.

### [about_Remote_Variables](about_Remote_Variables.md)
Explains how to use local and remote variables in remote
commands.

### [about_Requires](about_Requires.md)
Prevents a script from running without the required elements.

### [about_Reserved_Words](about_Reserved_Words.md)
Lists the reserved words that cannot be used as identifiers because they
have a special meaning in Windows PowerShell.

### [about_Return](about_Return.md)
Exits the current scope, which can be a function, script, or script block.

### [about_Run_With_PowerShell](about_Run_With_PowerShell.md)
Explains how to use the "Run with PowerShell" feature to run
a script from a file system drive.

### [about_scopes](about_scopes.md)
Explains the concept of scope in Windows PowerShell and shows how to set
and change the scope of elements.

### [about_Scripts](about_Scripts.md)
Describes how to run and write scripts in  Windows PowerShell?

### [about_Script_Blocks](about_Script_Blocks.md)
Defines what a script block is and explains how to use script blocks in
the Windows PowerShell programming language.

### [about_Script_Internationalization](about_Script_Internationalization.md)
Describes the script internationalization features that make it easy for scripts to display
messages and instructions to users in their user interface (UI) language.

### [about_Session_Configurations](about_Session_Configurations.md)
Describes session configurations, which determine the users who can
connect to the computer remotely and the commands they can run.

### [about_Session_Configuration_Files](about_Session_Configuration_Files.md)
Describes session configuration files, which are used in a
session configuration (also known as an "endpoint") to define the
environment of sessions that use the session configuration.

### [about_Signing](about_Signing.md)
Explains how to sign scripts so that they comply with the Windows
PowerShell execution policies.

### [about_simplified_syntax](about_simplified_syntax.md)
{{Manually Enter about_simplified_syntax Description Here}}

### [about_Special_Characters](about_Special_Characters.md)
Describes the special characters that you can use to control how
Windows PowerShell interprets the next character in a command or parameter.

### [about_Splatting](about_Splatting.md)
Describes how to use splatting to pass parameters to commands
in Windows PowerShell.

### [about_Split](about_Split.md)
Explains how to use the Split operator to split one or more strings into
substrings.

### [about_Switch](about_Switch.md)
Explains how to use a switch to handle multiple If statements.

### [about_Throw](about_Throw.md)
Describes the Throw keyword, which generates a terminating error.

### [about_Transactions](about_Transactions.md)
Describes how to manage transacted operations in Windows PowerShell.

### [about_Trap](about_Trap.md)
Describes a keyword that handles a terminating error.

### [about_Try_Catch_Finally](about_Try_Catch_Finally.md)
Describes how to use the Try, Catch, and Finally blocks to handle terminating errors.

### [about_Types.ps1xml](about_Types.ps1xml.md)
Explains how to use Types.ps1xml files to extend the types of objects
that are used in Windows PowerShell.

### [about_type_accelerators](about_type_accelerators.md)
{{Manually Enter about_type_accelerators Description Here}}

### [about_Type_Operators](about_Type_Operators.md)
Describes the operators that work with Microsoft .NET Framework types.

### [about_Updatable_Help](about_Updatable_Help.md)
Describes the updatable help system in Windows PowerShell.

### [About_Using](About_Using.md)
Allows to indicate which namespaces are used in the session.

### [about_Variables](about_Variables.md)
Describes how variables store values that can be used in  Windows PowerShell?

### [about_While](about_While.md)
Describes a language statement that you can use to run a command block based on the results of a conditional test.

### [about_Wildcards](about_Wildcards.md)
Describes how to use wildcard characters in Windows PowerShell.

### [about_windows_powershell_5.0](about_windows_powershell_5.0.md)
{{Manually Enter about_windows_powershell_5.0 Description Here}}

### [about_Windows_PowerShell_ISE](about_Windows_PowerShell_ISE.md)
Describes the features and system requirements of Windows PowerShell
Integrated Scripting Environment (ISE).

### [about_Windows_RT](about_Windows_RT.md)
Explains limitations of  Windows PowerShell?4.0 on Windows RT 8.1.

### [about_WMI](about_WMI.md)
Windows Management Instrumentation (WMI) uses the Common Information Model (CIM) to represent systems, applications, networks, devices, and other manageable components of the modern enterprise.

### [about_WMI_Cmdlets](about_WMI_Cmdlets.md)
Provides background information about Windows Management Instrumentation (WMI) and  Windows PowerShell?

### [about_WQL](about_WQL.md)
Describes WMI Query Language (WQL), which can be
used to get WMI objects in Windows PowerShell.

